--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>safemoon-paper-wallet</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Safemoon Paper Wallet Generator</title>
   </head>
   <body>
     <div id="app"></div>
