--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Safemoon Paper Wallet Generator</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app" class="container-fluid"></div>
   </body>
 </html>
